// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStyleFromPropsNative returns correct CSS string with provided style properties 1`] = `
"
  background: rgba(0, 123, 255, 1);
  flex: 1;
  padding-left: 25px;
  padding-top: 35px;
  padding-right: 30px;
  width: 300px;
  margin-top: 10px;
  margin-bottom: 5px;
  opacity: 0.8;
  margin-left: 15px;
  margin-right: 20px;
  height: 150px;
  max-width: 100px;
  max-height: 200px;
  min-height: 50px;
  border-color: rgba(255, 255, 255, 0.2);
  border-width: 1px;
  margin: 40px;
"
`;

exports[`getStyleFromPropsNative returns prefers backgroundColor prop over backgroundColorFromTheme prop 1`] = `
"
  background: red;
  flex: 1;
  padding-left: 25px;
  padding-top: 35px;
  padding-right: 30px;
  width: 300px;
  margin-top: 10px;
  margin-bottom: 5px;
  opacity: 0.8;
  margin-left: 15px;
  margin-right: 20px;
  height: 150px;
  max-width: 100px;
  max-height: 200px;
  min-height: 50px;
  border-color: rgba(255, 255, 255, 0.2);
  border-width: 1px;
  margin: 40px;
"
`;
